--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,3 +3,12 @@
     padding: 15px;
     margin: 0 auto;
 }
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+.txt-size-18 {
+    font-size: 18px;
+}
+.txt-size-24 {
+    font-size: 24px;
+}
